--- a/src/main/webapp/form.html
+++ b/src/main/webapp/form.html
@@ -17,6 +17,7 @@
 	<script src="js/initialXlatTables.js"></script>
 	<script src="js/xlat.js"></script>
 	<script src="js/form.js"></script>
+	<script src="js/practice.js"></script>
 	<script type="text/javascript">
 		String.prototype.replicate = function (rep) {
 			var str = '' + this;
@@ -38,10 +39,10 @@
 				console.log(input);
 			}
 		) (3);
-		var foo;
-		if(foo && foo.bar()){
+		/*var foo;
+		if(foo && foo.bar()){ // foo.bar is not a function
 			console.log(true);
-		}
+		}*/
 		console.log(1 + 2 + 3);
 		console.log('1' + 2 + 3);
 		console.log(1 + 2 + '3');
